page overflow was fixed

--- a/src/components/users/login.css
+++ b/src/components/users/login.css
@@ -20,7 +20,7 @@
 
 .loginContainer label{
     margin-top: 2%;
-    padding-left: 2%;
+    padding-left: 1%;
 }
 
 .loginInput{
